--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prismicio/client": "^4.0.0",
+    "animate.css": "^4.1.1",
+    "css-loader": "^5.2.0",
+    "file-loader": "^6.2.0",
+    "hover.css": "^2.3.2",
     "next": "10.0.9",
+    "next-react-svg": "^1.1.2",
+    "prismic-reactjs": "^1.3.3",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "sass": "^1.32.4",
+    "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1"
   }
 }
