--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "css-loader": "^5.2.0",
     "file-loader": "^6.2.0",
     "hover.css": "^2.3.2",
+    "jquery": "^3.6.0",
     "next": "10.0.9",
     "next-react-svg": "^1.1.2",
     "prismic-reactjs": "^1.3.3",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-hook-mighty-mouse": "^1.4.31",
     "sass": "^1.32.8",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1"
