--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "sass": "^1.32.8",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1"
+  },
+  "devDependencies": {
+    "react-svg-loader": "^3.0.3"
   }
 }
