--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "file-loader": "^6.2.0",
     "hover.css": "^2.3.2",
     "jquery": "^3.6.0",
+    "locomotive-scroll": "^4.1.1",
     "next": "10.0.9",
     "next-react-svg": "^1.1.2",
     "prismic-reactjs": "^1.3.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-mighty-mouse": "^1.4.31",
+    "react-locomotive-scroll": "^0.1.7",
     "react-smooth-scrollbar": "^8.0.6",
     "sass": "^1.32.8",
     "smooth-scrollbar": "^8.6.1",
