--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react-dom": "^17.0.1",
     "react-hook-mighty-mouse": "^1.4.31",
     "react-locomotive-scroll": "^0.1.7",
+    "react-modal": "^3.13.1",
     "react-smooth-scrollbar": "^8.0.6",
     "sass": "^1.32.8",
+    "scroll-lock": "^2.1.5",
     "smooth-scrollbar": "^8.6.1",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1"
