--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.1",
     "react-hook-mighty-mouse": "^1.4.31",
     "react-locomotive-scroll": "^0.1.7",
+    "react-masonry-css": "^1.0.16",
     "react-modal": "^3.13.1",
     "react-smooth-scrollbar": "^8.0.6",
     "sass": "^1.32.8",
